# src/main/java/com/company/readingIsGood/order/OrderController.java
@@ -1,13 +1,18 @@
 package com.company.readingIsGood.order;
 
+import com.company.readingIsGood.order.model.Order;
 import com.company.readingIsGood.order.service.OrderService;
+import com.company.readingIsGood.util.Utility;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.text.ParseException;
+import java.text.SimpleDateFormat;
 import java.time.LocalDate;
 import java.util.Date;
 import java.util.List;
+import java.util.Locale;
 
 @RestController
 public class OrderController {
@@ -20,21 +25,20 @@ public class OrderController {
     }
 
     @PostMapping(path = "/order")
-    public void saveOrder(@RequestBody Order order) {
+    public void addOrder(@RequestBody Order order) {
         orderService.saveOrder(order);
     }
 
-    @GetMapping(path = "/order/{orderId}")
-    public Order getOrderById(@PathVariable long orderId) {
-        return orderService.getOrderById(orderId);
+    @GetMapping(path = "/order")
+    public ResponseEntity<Order> getOrderById(@RequestParam Long orderId) {
+        return ResponseEntity.ok(orderService.getOrderById(orderId));
     }
 
-    @GetMapping(path = "/order/{startDate}/{endDate}")
-    public ResponseEntity<List<Order>> getOrder(@PathVariable Date startDate,
-                                                @PathVariable Date endDate) {
+    @GetMapping(path = "/order/date")
+    public List<Order> getOrdersByDateInterval(@RequestParam String startDate,
+                                                @RequestParam String endDate) throws ParseException {
 
-        orderService.getOrdersByDate(startDate, endDate);
-
-        return null;
+        return orderService.getOrdersByDate(Utility.getDateFromString(startDate),
+                Utility.getDateFromString(endDate));
     }
 }
